Compiler/tests/typing/bad/testfile-field-7.rs

struct S { a: i32, b: bool }
fn main() { let x = S { a: 42 }; }
